version 1.8.2, in progress
- Fixes for GARCH "corner cases"
- "summary" command: add --simple and --by=byvar options
- Fix another XLS import bug

5/21/2009 version 1.8.1
- Fix bugs 2533543, 2590417, 2604963, 2687954, 2734471, 
   2741374, 2780592
- resample() function: add a second, optional parameter,
  namely a block length for resampling by moving blocks
- Ensure that gretl.lang (for gtksourceview) gets updated
  in Windows build
- Forecasts with confidence intervals: make the confidence
  level configurable via the GUI (and similarly for 
  confidence bands on impulse response plots)
- VECMs: add a GUI selector for lags of any exogenous 
  variables
- genr: make '^' (exponentiation) associate rightwards
- genr: support the syntax "func(args)[slice]" to select
  directly a submatrix from a function call that returns a
  matrix
- panel, random effects estimator, Hausman test: notify the 
  user if the matrix-difference version of the Hausman test 
  fails; also document the --hausman-reg option in the help 
  entry for the "panel" command; and fix the covariance
  matrix in case --hausman-reg is chosen.
- VARs: support gaps in the lag structure (not for VECMs);
  also, allow single-equations VARs
- New GUI graph option: "Plot curve" under the tools menu,
  for quick plotting of a formula
- Chow test: add the option of specifying a dummy variable
  rather than a break point
- Boxplots: enable boxplot command in loops
- seq() function: add a third, optional step parameter
- Speed up loading of very large data files in gretl
  native format
- Fixes for handling of data files with over 999 variables
- Minor improvement to parsing of dates in CSV files
- "lags" command: accept a scalar variable for the parameter
  indicating how many lags to generate
- "logit" command: support multinomial logit via a new
  option, --multinomial
- ordered logit, probit: add count of cases 'correctly
  predicted', plus overall likelihood ratio test for all
  slopes = 0