@@ -2,6 +2,11 @@ version 1.8.2, in progress
 - Fixes for GARCH "corner cases"
 - "summary" command: add --simple and --by=byvar options
 - Fix another XLS import bug
+- nls, mle, gmm, arma: allow continuation of scripts when
+  these estimators fail to converge, in which case the variable
+  $error is set to a non-zero value
+- Add fcstats function to provide statistics for evaluation of
+  forecasts
 
 5/21/2009 version 1.8.1
 - Fix bugs 2533543, 2590417, 2604963, 2687954, 2734471, 
